--- a/ecommerce/pom.xml
+++ b/ecommerce/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.caiovlf</groupId>
     <artifactId>ecommerce</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <build>
         <plugins>
             <plugin>
@@ -19,6 +23,13 @@
             </plugin>
         </plugins>
     </build>
+    <modules>
+        <module>service-email</module>
+        <module>service-fraud-detector</module>
+        <module>service-log</module>
+        <module>service-new-order</module>
+        <module>common-kafka</module>
+    </modules>
 
     <dependencies>
         <dependency>
