--- a/ecommerce/pom.xml
+++ b/ecommerce/pom.xml
@@ -29,6 +29,7 @@
         <module>service-log</module>
         <module>service-new-order</module>
         <module>common-kafka</module>
+        <module>service-users</module>
     </modules>
 
     <dependencies>
