--- a/ecommerce/pom.xml
+++ b/ecommerce/pom.xml
@@ -30,6 +30,7 @@
         <module>service-new-order</module>
         <module>common-kafka</module>
         <module>service-users</module>
+        <module>service-http-ecommerce</module>
     </modules>
 
     <dependencies>
